# hoblang-old

./: .clangd  .gitignore  CMakeLists.txt  README.md  hoblang.c
examples/: alloc.hob  anon_fun.hob  arrays.hob  asm.hob  break_continue.hob  console.hob  constants.hob  convert.hob  csharp.hob  cstest.hob  ctest.c  ctest.hob  errors_test.hob  ext_func.hob  floats.hob  generics.hob  http.hob  http_nolibc.hob  libc.hob  macro_concept.hob  nolibc.hob  optionals.hob  parse_test.hob  putc.hob  short_binops.hob  slice.hob  std.hob  str.hob  string.hob  strings.hob  structs.hob  tcp.hob  test.hob  test_mod.hob  type_concept.hob  value_decls.hob
examples/concepts/: generics.hob
examples/cs-api/: console.hob  convert.hob
examples/libc/: io.hob  lib.hob  mem.hob  process.hob  socket.hob  types.hob
examples/pthread/: attr.hob  lib.hob  thread.hob
examples/std/: fs.hob  io.hob  mem.hob  process.hob  salloc.hob  slices.hob  string.hob  tcp.hob
examples/std/http/: request.hob
examples/std/linux/: io.hob  mem.hob  net.hob  process.hob  syscall.hob
examples/tcp/: handle.hob  lib.hob  server.hob
include/ast/api/: body.h  defer.h  expr.h  func_info.h  generic.h  module_node.h  path.h  type.h  val_decl.h
include/ast/impl/: expr.h  type.h
include/ast/private/: body.h  expr.h  func_info.h  generic.h  module.h  module_node.h  path.h  type.h  val_decl.h
include/cmd/: api.h  impl.h  private.h  usage.h
include/cmd/shared/: llvm.h
include/core/: ansi.h  assert.h  location.h  path.h  print.h  vec.h
include/core/slice/: api.h  io.h  slice.h
include/lexer/: api.h  impl.h  lexer.h  part.h  private.h  token.h
include/lexer/parts/: simple.h  symbol.h
include/llvm/: api.h  impl.h  private.h
include/llvm/parts/: body.h  expr.h  func.h  module.h  path.h  type.h
include/llvm/utils/: alloca.h
include/parser/: api.h  impl.h  parser.h  private.h  token_stops.h
include/parser/parts/: body.h  const.h  expr.h  func_info.h  generic.h  module_node.h  path.h  type.h  types.h  val_decl.h
include/print/: ast.h
include/sema/: project.h  type.h  value.h
include/sema/const/: api.h  const.h
include/sema/module/: api.h  decls.h  impl.h  module.h  private.h
include/sema/project/: api.h  impl.h  module.h  project.h
include/sema/type/: api.h  arch.h  func.h  private.h  type.h
include/sema/value/: api.h  private.h  value.h
src/: main.c  print.c  print.h
src.bak/cmd/: emit_llvm.c  help.c  list_targets.c
src.bak/llvm/parts/: func.c  path.c
src.bak/parser/parts/: type.c
src.bak/sema/arch/: bits.c
src.old/: main.c
src.old/cmd/: build_exe.c
src.old/llvm/: api.c
src.old/llvm/parts/: expr.c  val_decl.c
src.old/parser/parts/: expr.c  module_node.c  val_decl.c
src.old/sema/module/: api.c  private.c
src/ast/: api.h  body.h  expr.c  expr.h  func_info.h  module.h  module_node.h  node.h  path.h  type.c  type.h
src/ast/expr/: as.h  binop.h  call.h  get_inner.h  get_local.h  unary.h
src/ast/interface/: behaviour.c  behaviour.h  body.h  decl.h  expr.h  generic.h  global.c  global.h  global_decl.c  global_decl.h  module.h  node.c  node.h  path.c  path.h  type.h  val_info.h
src/ast/node/: decl.h  stmt.h
src/ast/print/: expr.c  type.c
src/ast/shared/: behaviour.h  body.h  expr.h  func_info.h  generic.h  global.h  path.h  type.h  val_info.h
src/ast/stmts/: asm.h  body.h  defer.h  var.h  while.h
src/cmd/: api.c  build_exe.c  build_obj.c  cmd.h  emit_llvm.c  help.c  private.h  usage.h
src/cmd/shared/: arch.c  arch.h  llvm.c  llvm.h
src/core/: assert.c  assert.h  chars.h  fatptr.c  fatptr.h  file.c  file.h  ftx.c  ftx.h  log.c  log.h  not_null.h  path.c  path.h  print.c  print.h  process.c  process.h  slice.c  slice.h  tx_buffer.c  tx_buffer.h  vec.c  vec.h
src/core/slice/: api.c  io.c
src/expr/: expr.h  parse.h
src/lexer/: api.c  api.h  ast.h  base.c  base.h  expr.c  expr.h  lex.c  lex.h  lexer.c  lexer.h  parsers.h  part.h  parts.h  private.c  private.h  tokens.c  tokens.h
src/lexer/impl/: api.c  impl.h  next.c  private.c
src/lexer/interface/: lexer.c  lexer.h  token.h
src/lexer/lex/: char.c  ident.c  integer.c  keyword.c  other.h  str.c  symbol.c  symbol.h
src/lexer/parsers/: char.c  char.h  ident.c  ident.h  integer.c  integer.h  keyword.c  keyword.h  str.c  symbol.c  symbol.h
src/lexer/parts/: char.c  ident.c  integer.c  keyword.c  str.c  symbol.c  symbol.h
src/lexer/token/: kind.h  token.h
src/llvm/: alloca.c  alloca.h  api.c  llvm.c  llvm.h  parts.h  private.c  slice.c  slice.h  type.c  type.h  value.c  value.h
src/llvm.bak/: impl.h
src/llvm.bak/parts/: func.h  val_decl.h
src/llvm.bak/utils/: member.h
src/llvm/interface/: llvm.c  llvm.h
src/llvm/node/: asm.c  asm.h  body.c  body.h  body_break.c  body_break.h  expr.c  expr.h  func.c  func.h  if.c  if.h  node.c  node.h  path.c  path.h  val.c  val.h
src/llvm/parts/: body.c  body.h  expr.c  func.c  module.c  path.c  type.c  type.h  val_decl.c  value.c
src/llvm/utils/: alloca.c  member.c  slices.c  slices.h
src/parser/: api.c  api.h  ast.c  ast.h  ast_type.h  base.c  base.h  expr.c  expr.h  parser.c  parser.h  parsers.h  parts.h  print.h  private.c  private.h  tokens.h
src/parser/ast/: body.h  expr.c  expr.h  func_info.h  mod_path.h  module.h  module_node.h  node.c  node.h  path.h  type.h  value.h
src/parser/impl/: api.c  impl.h  private.c
src/parser/interface/: parser.c  parser.h
src/parser/parsers/: body.c  expr.c  func_call.c  func_info.c  mod_path.c  module.c  module_node copy.c  module_node.c  path.c  type.c  value.c
src/parser/parts/: body.c  body.h  expr.c  expr.h  generic.c  module.c  module_node.c  module_node.h  path.c  path.h  (+2 more)
src/print/: ast.h  base.c  base.h  lexer.c  lexer.h  sema.h
src/sema/: api.h  base.c  base.h  behaviour.h  body_break.h  const.h  decl.h  loop.h  module.c  module.h  parts.h  project.c  project.h  scope.c  scope.h  sema.c  sema.h  type.c  type.h  value.c  value.h
src/src/: main.c  print.h
src/tokenizer/: base.c  base.h  print.c  print.h  tokenizer.c  tokenizer.h  tokens.c  tokens.h
syntax/: hob.vim
tests/: lexer.c  tests.h
(+492 files in other folders)
